# maui-core-src

./: CMakeLists.txt  README.md
libs/: CMakeLists.txt
libs/audio/: CMakeLists.txt
libs/audio/src/: CMakeLists.txt
libs/audio/src/code/qml/: plugin.cpp
libs/notifications/: CMakeLists.txt
libs/notifications/src/: CMakeLists.txt
libs/notifications/src/code/: notifications_plugin.cpp  notifications_plugin.h
libs/power/: CMakeLists.txt
libs/power/src/: CMakeLists.txt
libs/power/src/code/: powerplugin.cpp  powerplugin.h
